# ur-wireless-tools

./: Makefile
pkg_src/: CMakeLists.txt  Makefile
pkg_src/include/: interface_detector.h  json_formatter.h  scan_alternatives.h  wifi_scanner.h
pkg_src/spec/: ur-wireless-tools.c  ur-wireless-tools.h  wireless-tools-config.h
pkg_src/src/: interface_detector.c  json_formatter.c  main.c  scan_alternatives.c  wifi_scanner.c
